'_all' configuration option to apply a config value to all tests

--- a/examples/sec-gather-misconfigs.conf
+++ b/examples/sec-gather-misconfigs.conf
@@ -1,5 +1,9 @@
 {
   "ssh": {
+    "_all": {
+      # This configuration option applies to all plugin tests.
+      "sshd_config": "/etc/ssh/sshd_config"
+    }
     "permit_root_login": {
       # Location of the OpenSSH server configuration file
       "sshd_config": "/opt/patched_ssh/sshd_config"
