_all config for webserver

--- a/examples/sec-gather-misconfigs.conf
+++ b/examples/sec-gather-misconfigs.conf
@@ -15,19 +15,12 @@
   },
 
   "webserver": {
-    "version_in_header": {
-      # A list of URLs that are served by the locally running web server. You
-      # should probably include http and https versions.
+    "_all": {
       "urls": [
         "http://127.0.0.1/",
         "https://127.0.0.1/",
         "http://www.example.com",
         "https://www.example.com",
-      ],
-    },
-    "x_frame_options_header": {
-      # See above
-      "urls": [
       ],
     }
   }
